[package]
name = "change-power-setting-rs"
version = "0.1.0"
authors = ["azuga"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["powrprof", "libloaderapi", "powersetting", "impl-debug", "impl-default"] }
